project(pval)
cmake_minimum_required(VERSION 2.8)
add_executable(${PROJECT_NAME} pval.c)
if(CMAKE_SIZEOF_VOID_P EQUAL 8)
  set(INT_TYPE "__int128" CACHE STRING "Integer type")
else()
  set(INT_TYPE "long long" CACHE STRING "Integer type")
endif()
add_definitions(-DINTTYPE=${INT_TYPE})
set(CMAKE_BUILD_TYPE DEBUG)
#set(CMAKE_BUILD_TYPE RELEASE)
